--- a/jobkarleapp/templates/companys-img.html
+++ b/jobkarleapp/templates/companys-img.html
@@ -7,28 +7,37 @@
 
 </style>
 
-<div class="logo-imgs container">
-     <h3 class="font-weight-bold text-center dark-grey-text pb-2 m-auto">Our Partners</h3>
+<div class="logo-imgs">
+        <div class="row m-auto" style="width: max-content;">
+                <div class="">
+                 <div class="carde card m-1">
+                   <p class="" style="color: white; font-size:18px;"></p>
+                 </div> 
+                </div>
+                <div class="pt-1">
+                 <p class="font-weight-bold p-2  text-center dark-grey-text">Our Partners</p>
+                </div>
+              </div>
     <div class="row">
             <div class="col-xs-6 m-auto">
                     <div class="row">
                                 <div class="p-2">
-                                <img  class=" card" src="{% static 'accenture.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'accenture.png' %}" width="80" id="img-companys" >
                                 </div>
                                 <div class="p-2">
-                                        <img  class=" card" src="{% static '1.jpeg' %}" width="100" id="img-companys" >
+                                        <img  class=" card" src="{% static '1.jpeg' %}" width="80" id="img-companys" >
                                 </div>
                                 <div class="p-2">
-                                        <img  class=" card" src="{% static '0.jpeg' %}" width="100" id="img-companys" >
+                                        <img  class=" card" src="{% static '0.jpeg' %}" width="80" id="img-companys" >
                                 </div>
                                 <div class="p-2">
-                                        <img  class=" card" src="{% static '9B4BF65F-12AA-4BAD-9577-728930EA7356.png' %}" width="100" id="img-companys" >
+                                        <img  class=" card" src="{% static '9B4BF65F-12AA-4BAD-9577-728930EA7356.png' %}" width="80" id="img-companys" >
                                 </div>
                                 <div class="p-2">
-                                        <img  class=" card" src="{% static 'amazon-logo.png' %}" width="100" id="img-companys" >
+                                        <img  class=" card" src="{% static 'amazon-logo.png' %}" width="80" id="img-companys" >
                                 </div>
                                 <div class="p-2">
-                                        <img  class=" card" src="{% static 'dell.png' %}" width="100" id="img-companys" >
+                                        <img  class=" card" src="{% static 'dell.png' %}" width="80" id="img-companys" >
                                 </div>
                     </div>
                         
@@ -36,22 +45,22 @@
        <div class="col-xs-6 m-auto">
                <div class="row">
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'dxc.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'dxc.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'google-logo.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'google-logo.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'hcl.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'hcl.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'ibm-logo-2.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'ibm-logo-2.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'hexa.jpg' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'hexa.jpg' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'FIS_company_Fidelity_National_Information_Services_Inc._Corporate_Logo.svg_.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'FIS_company_Fidelity_National_Information_Services_Inc._Corporate_Logo.svg_.png' %}" width="80" id="img-companys" >
                 </div>
                </div>
        </div>
@@ -62,45 +71,45 @@
             <div class="col-xs-6 m-auto">
                     <div class="row">
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'infosys.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'infosys.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'invesco.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'invesco.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'ntt.jpg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'ntt.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                        <img  class=" card" src="{% static 'oracle.jpg' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'oracle.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'Polaris-Logo.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'Polaris-Logo.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'samsung-logo.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'samsung-logo.png' %}" width="80" id="img-companys" >
                         </div>
                     </div>
             </div>
             <div class="col-xs-6 m-auto">
                     <div class="row">
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'sasken.jpg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'sasken.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'sony.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'sony.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'tcs.jpg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'tcs.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'tech-m.jpeg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'tech-m.jpeg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'logica-min.jpg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'logica-min.jpg' %}" width="80" id="img-companys" >
                         </div>
                         
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'mu-sigma-696x365.gif' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'mu-sigma-696x365.gif' %}" width="80" id="img-companys" >
                         </div>
                     </div>
             </div>
@@ -109,22 +118,22 @@
             <div class="col-xs-6 m-auto">
                     <div class="row">
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'wipro.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'wipro.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'Zoho_logo-700x241.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'Zoho_logo-700x241.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'walmart.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'walmart.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'world-health.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'world-health.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'Untitled-3.jpg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'Untitled-3.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'state-grid.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'state-grid.png' %}" width="80" id="img-companys" >
                         </div>
                     </div>
             </div>
@@ -155,44 +164,44 @@
             <div class="col-xs-6 m-auto">
                     <div class="row">
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'bank-of america.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'bank-of america.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'facebook-logo.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'facebook-logo.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'flipkart-logo-696x198.jpg' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'flipkart-logo-696x198.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                        <img  class=" card" src="{% static 'capgemini.jpg' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'capgemini.jpg' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'cognizant-696x212.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'cognizant-696x212.png' %}" width="80" id="img-companys" >
                         </div>
                         <div class="p-2">
-                                <img  class=" card" src="{% static 'mphasis-logo.png' %}" width="100" id="img-companys" >
+                                <img  class=" card" src="{% static 'mphasis-logo.png' %}" width="80" id="img-companys" >
                         </div>
                     </div>
             </div>
        <div class="col-xs-6 m-auto">
                <div class="row">
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'intel-logo.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'intel-logo.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'huawei-logo-446x420.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'huawei-logo-446x420.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'deloitte.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'deloitte.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'microsoft-logo.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'microsoft-logo.png' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'mindtree-logo-696x365.jpg' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'mindtree-logo-696x365.jpg' %}" width="80" id="img-companys" >
                 </div>
                 <div class="p-2">
-                        <img  class=" card" src="{% static 'cisco-logo.png' %}" width="100" id="img-companys" >
+                        <img  class=" card" src="{% static 'cisco-logo.png' %}" width="80" id="img-companys" >
                 </div>
                </div>
        </div>
