--- a/jobkarleapp/static/static_css/base.css
+++ b/jobkarleapp/static/static_css/base.css
@@ -33,13 +33,13 @@ li{
   font-size: 12px;
 }
 .nav-imgset{
-  background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)) , url("/static/78.jpg");
+  background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)) , url("/static/main.jpg");
   color: white;
   background-repeat: no-repeat;
   /* background-attachment:fixed; */
   background-size: cover;
-  background-position:bottom;
-  height:390px; 
+  background-position:top;
+  height:190px; 
  
 
 }
@@ -224,6 +224,13 @@ li{
   min-width: 320px;
   z-index: 1;
 }
+#dropdownMenu1{
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("/static/profilebg.jpg");
+    background-position:right;
+    background-size:cover;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
 .dropdown-user a {
   color: black;
   text-decoration: none;
@@ -237,10 +244,18 @@ li{
 .dropdown-users:hover .dropdown-user {display: block;
   margin-right: 100px;
 }
+#profilebg{
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("/static/bg_2.jpg");
+  background-position:right;
+  background-size:cover;
+}
 .dropdown-search {
   display: none;
   position: absolute;
-  background-color:rgba(172, 175, 177, 0.411);
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url("/static/mainsearchbg.jpg");
+  height: 500px;
+  background-position: center;
+  background-size: cover;
   padding: 10px;
   min-width: 320px;
   z-index: 1;
@@ -284,8 +299,6 @@ li{
 
 
   }
-
-}
 .dropdown-SEARCH:hover a {
   
 }
@@ -337,8 +350,3 @@ width:620px;min-height:52px;z-index:2}
     .search-small {left:13px;}
     .search-large {left:13px;}
 }
-
-
-
-
-
