--- a/jobkarleapp/templates/base.html
+++ b/jobkarleapp/templates/base.html
@@ -142,20 +142,82 @@
       height: 5px;
     }
 }
+
+.dropdown-submenu {
+  position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px;
+  border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #ccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+  border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+  float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  -webkit-border-radius: 6px 0 6px 6px;
+  -moz-border-radius: 6px 0 6px 6px;
+  border-radius: 6px 0 6px 6px;
+}
+.mainlogo {
+  background:none repeat scroll 20 0 #FFFFFF;
+  box-shadow: 1px 1px 4px 4px threedshadow;   
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-width: 0 16px 16px 0;
+  border-style: solid;
+}
+.mainlogo:before {
+  
+  
+  border-color: #658E15 #fff;
+}
 </style>
 
 <body class="body-imgset">
     <!--/.Navbar-->
-    <nav class="navbar navbar-expand-lg base11 navbar-text-color" style="padding:2px;">
-      <img src="{% static 'jobkarle-logo1.JPG' %}" width="200" height="40" alt="My image"> <strong class="navbar-brand "></strong>
-           
+    <nav class="navbar navbar-expand-lg base11 navbar-text-color static-top" style="padding:2px;">
+      {% include 'logo.html' %}
             <button class="navbar-toggler" data-toggle="collapse" data-target="#uiNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="uiNavbar">
-                <ul class="navbar-nav " style="float: right">
-                    <li class="nav-item dropdown ">
-                        <a href="index.html" class="nav-link">JOBS</a>
+                <ul class="navbar-nav" id="big-navbar">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link">JOBS</a>
                         <!-- dropdown list data's  -->
                         <div class="dropdown-content animated zoomIn">
                           <div class="row">
@@ -179,7 +241,7 @@
                           
                     </li>
                     <li class="nav-item dropdown-RECRUITERS">
-                        <a href="about.html" class="nav-link">
+                        <a class="nav-link">
                             RECRUITERS</a>
                             <div class="dropdown-recruiters animated zoomIn">
                                 <div class="row ">
@@ -193,11 +255,11 @@
                                 </div>
                     </li>
                     <li class="nav-item dropdown-comp ">
-                        <a href="services.html" class="nav-link">
+                        <a class="nav-link">
                              COMPANYS</a>
-                             <div class="dropdown-companys animated zoomIn">
-                                <div class="row">
-                                  <div class="col-sm">
+                             <div class="dropdown-companys animated zoomIn" style="width: max-content;">
+                                <div class="m-auto">
+                                  <div class="">
                                   <a href="#">Browse All Companys</a><br>
                                   <a href="#">About Companys</a><br>
                                   <a href="#">Interview Quetions</a><br>
@@ -210,7 +272,7 @@
                                 </div>
                     </li>
                     <li class="nav-item dropdown-tool">
-                        <a href="contact.html" class="nav-link">
+                        <a  class="nav-link">
                              TOOLS</a>
                              <div class="dropdown-tools animated zoomIn">
                                   <div class=>
@@ -225,7 +287,7 @@
                                 </div>
                     </li>
                     <li class="nav-item dropdown-mor ">
-                        <a href="contact.html" class="nav-link">
+                        <a class="nav-link">
                          MORE</a>
                          <div class="dropdown-more animated zoomIn">
                             <div class="row">
@@ -270,84 +332,36 @@
                   {% endif %}
                 
                 </ul>
-                <ul class="navbar-nav ml-auto " style="float: right">
-                  <li class="nav-item dropdown ">
-                    <li class="nav-item">
-                      <a href="contact.html" class="nav-link"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <i class="far fa-bell fa-2x animated swing"></i>
+                <ul class="navbar-nav ml-auto " style="float: right; position:absolute; top:0; right:0;">
+                  {% if user.is_authenticated %}
+                  {% if profilepic %}
+                  <li class="dropdown nav-link">
+                    
+                       <a href="contact.html" class="nav-link dropdown-toggle card" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="far fa-bell fa-1.5x animated swing" style="color: white;"></i>
                           {% if notification_unread %}
                           <div class="badge">
                             <div class="message-count">{{notification_count}}</div>
                           </div>
                           {% endif %}</a>
-                          
-                            <div class="drop-down">
-                              <ul class="dropdown-menu" style="width: max-content;" style="background-color: skyblue;">
-                                <li class="head text-light"style="background-color: skyblue;">
-                                  <div class="row" style="background-color: skyblue;">
-                                    <div class="col-lg-12 col-sm-12 col-12" style="background-color: skyblue;">
-                                      <span style="color: black; font-w">Notifications ({{notification_count}})</span>
-                                      <a href="" class="float-right" style="color:black;">Mark all as read</a>
-                                    </div>
-                                </li>
-                                <div>
-                                  {% for i in notifications %}  
-                                  {% if 'Unread' == i.Status %}
-                                 
-                                  <div class=" card  m-1" style="background-color: rgb(228, 187, 208); width:300px;">
-                                    <a href="{% url 'jobkarleapp:notification_read' i.id  user_data.id %}">
-                                      <div class="row">
-                                        <div class="col-sm-3">
-                                          <img class="p-1" src="{{i.Profile.url}}" style="border:1px solid black; background-color:rgb(198, 207, 209);" width="30" height="30" class="rounded-circle img-responsive" alt="no profile">
-                                        </div>
-                                        <div class="col-sm-9">
-                                          
-                                          <strong class="" style="font-size: 11px;">{{i.Name}}{{i.id}}fhfh</strong>
-                                          <div>
-                                            <p>{{i.Subject}}</p>
-                                           </div>
-                                        </div>
-                                      </div>
-                                    </a>
-                                  </div>
-                                  
-                                  {% else%}
-                                  
-                                   <div class=" card  m-1" style="background-color: rgb(240, 230, 235); width:300px;">
-                                    <a href="{% url 'jobkarleapp:notification_read' i.id  user_data.id %}" >
-                                      <div class="row ">
-                                        <div class="col-sm-3">
-                                          <img class="p-1" src="{{i.Profile.url}}" style="border:1px solid black;" width="30" height="30" class="rounded-circle img-responsive" alt="no profile">
-                                        </div>
-                                        <div class="col-sm-9">
-                                          <strong class=""style="font-size: 11px;">{{i.Name}}{{i.id}}</strong>
-                                          <div>
-                                            <p>{{i.Subject}}</p>
-                                           </div>
-                                        </div>
-                                      </div>
-                                    </a>
-                                  </div>
-                                 
-                                  {% endif %}
-                                  {% endfor %}
-                                 
-                                </div>
-                                
-                                <li class="footer bg-dark text-center">
-                                  <a href="" class="text-light">View All</a>
-                                </li>
-                              </ul>
-                            </div>  
-                  </li>
-                  </li>
-                  <li class="nav-item dropdown-users"><img src="{{profilepic.Profile.url}}" width="50" height="50" class="rounded-circle img-responsive" alt="no profile">
-                  </li>
-                </ul>
+     
+                    <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" style="width:max-content;">
+                     
+                        <li class="dropdown-item"><a href="{% url 'jobkarleapp:notification_read' user_data.id %}">HR Notifications</a></li>
+                      
+                      </ul>
+                    </li>
+                    {% endif %}
+                    {% endif%}
+                <li class="nav-item dropdown-users p-2"><img src="{{profilepic.Profile.url}}" width="50" height="50" class="rounded-circle img-responsive" alt="no profile">
+                </li>
+              </ul>
+          </div>  
+                 
             </div>
       </nav>
     <div class="nav-imgset p-0 m-0">
-      <nav class="navbar navbar-dark  navbar-expand-sm">
+      <nav class="navbar navbar-dark  navbar-expand-sm" id="small-navbar">
         <div class="container">
             <button class="navbar-toggler" data-toggle="collapse" data-target="#uiNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -357,8 +371,9 @@
                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown-SEARCH">
                   <input type="text" style="background-color:rgba rgba(255, 255, 255, 0.055);color:white;" class="main-input main-name" name="NAME" placeholder="Hover here for advanced search...." />
-                      <div class="dropdown-search p-4" style="position: absolute; top:38px; width:90%;">
-                        <div><p><i class="fas fa-hiking c-white" style="width: min-content;"></i><strong style="color:black;"> My Stuff</strong></p></div>
+                      <div class="dropdown-search p-4 " id="dropdown-search" style="position: absolute; top:38px;">
+                        <div>
+                          <p><i class="fas fa-hiking c-white" style="width: min-content;"></i><strong style="color:black;"> My Stuff</strong></p></div>
                           <div class="row" style="width: 100%;">
                             <div class="col-xs-4 p-2 m-2">
                               <div class="row m-auto">
@@ -410,7 +425,15 @@
                               {% endif %}
                             </div>
                           </div>
-                          
+                          <div id="bottom-serch" style="width:max-content; margin:auto; position:relative; top:200px;">
+                            <h1  style=" font-weight: bold; color:white;">We Know That Some  Content is Not Working Will Update Soon To You </h1>
+                            <h1>------------------------------------------------------------------------------------------------------</h1>
+                            <div  style="position: absolute; right:0; width:max-content;">
+                              <div class="carde card p-2 mr-1">
+                                <p class=" m-auto " style="color: white; font-size:10px;">JOBKARLE.com ........ </p>
+                              </div>
+                            </div>
+                          </div>
                           </div>
                         </li>
                         {% endif %}
@@ -418,7 +441,7 @@
                 </li>
               </ul>
             </div>
-            <div class="collapse navbar-collapse" id="uiNavbar">
+            <div class=" smal-nav collapse navbar-collapse" id="uiNavbar">
                 <ul class="navbar-nav ml-auto">
                   
                     <li class="nav-item">
@@ -444,7 +467,8 @@
    
       <!-- multiple data search at a time search box -->
       {% if user.is_authenticated %}
-      <section>
+      {% if profilepic %}
+      <section class="main-profile" style="width: max-content;">
         <div class="m-4 bi-profile" style="width: max-content; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;">
           <div class="card-header" style="background-color: cornflowerblue; height:35px;">
@@ -452,12 +476,12 @@
               <h4 id="status" class="status on">Online</h4>
               </div>
           </div>
-          <div class="card-body p-2" style="background-color: yellow;">     
+          <div class="card-body p-2" id="profilebg">     
             <img style="position:relative; bottom:25px;" class="card m-0 p-0" src="{{profilepic.Profile.url}}" width="50" height="50" class="rounded-circle img-responsive" alt="no profile">   
             <a href="https://codepen.io/AlbertFeynman/" target="_blank">{{user_data.username}}</a>
          
           <div class="row p-2" style="padding-top: 0%;">
-            <a class="card p-1 m-2" style="width: max-content; color:black; font-size:12px;  font-weight:bold;">Following</a>
+            <a class="card p-1 m-2" style="width: max-content; color:black; font-size:12px;  font-weight:bold;">Followers</a>
             <a class="card p-1 m-2" style="width: max-content; color:black; font-size:12px;  font-weight:bold;">Following</a>
           </div>
           <div class="row" style="margin: auto;">
@@ -497,6 +521,7 @@
           
         </div>
       </section>
+      {% endif %}
       {% endif %}
     <section>
         {% block content %}
